--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -26,5 +26,10 @@
   "region": "Регион",
   "carType": "Вид ТС",
   "carBrand": "Марка",
-  "carModel": "Модель"
+  "carModel": "Модель",
+  "zabyil_parol": "Забыл пароль",
+  "send": "Отправить",
+  "confirm_code": "Код подтверждения",
+  "info_1_1": "На указанную электронную почту было направлено письмо с кодом подтверждения.",
+  "info_1_2": "Пожалуйста, введите его ниже для подтверждения регистрации."
 }
