add recovery and new_password screens

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -31,5 +31,8 @@
   "send": "Отправить",
   "confirm_code": "Код подтверждения",
   "info_1_1": "На указанную электронную почту было направлено письмо с кодом подтверждения.",
-  "info_1_2": "Пожалуйста, введите его ниже для подтверждения регистрации."
+  "info_1_2": "Пожалуйста, введите его ниже для подтверждения регистрации.",
+  "reenter_password": "Повторный ввод пароля",
+  "info_2": "Для восстановления доступа введите зарегистрированный адрес электронной почты",
+  "info3": "Введите новый пароль"
 }
