Заставка, окно профиля, SharedPreferences

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -34,5 +34,7 @@
   "info_1_2": "Пожалуйста, введите его ниже для подтверждения регистрации.",
   "reenter_password": "Повторный ввод пароля",
   "info_2": "Для восстановления доступа введите зарегистрированный адрес электронной почты",
-  "info3": "Введите новый пароль"
+  "info3": "Введите новый пароль",
+  "appName": "OTiDO",
+  "tagline": "Учет путевых листов"
 }
